nginx-deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-deploy
  labels:
    app: nginx
spec:
  # type: NodePort
  ports:
  - port: 80
    name: web
  selector:
    app: nginx
