nginx-deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-deploy
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/proxy-body-size: 10000m
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx
  rules:
  - host: platform.mazor.medtronic.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /ns-nginx-deploy
        backend:
          service:
            name: nginx
            port:
              number: 80
